# Qt-humpanel

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.en.md  README.md  img.qrc  qcustomplot.cpp  qcustomplot.h  roundprogressbar.cpp  roundprogressbar.h  run_with_qt5.bat  ui_MainWindow.h
framelesscore/: framelessdialog.cpp  framelessdialog.h  framelessmainwindow.cpp  framelessmainwindow.h  framelesswidget.cpp  framelesswidget.h
